[gd_scene load_steps=16 format=3 uid="uid://fyt4htnh62uq"]

[ext_resource type="Script" path="res://ui/activity_select_panel.gd" id="1_ecmi0"]
[ext_resource type="PackedScene" uid="uid://cxndtgcsjuwxh" path="res://ui/activity_select_button.tscn" id="2_gofsv"]
[ext_resource type="Script" path="res://ui/activity_duration_vbox.gd" id="3_lewa3"]
[ext_resource type="Script" path="res://ui/activity_start_button.gd" id="4_xhsmu"]
[ext_resource type="Script" path="res://ui/failed_to_start_label.gd" id="5_rbo4o"]
[ext_resource type="Script" path="res://ui/activity_details_panel.gd" id="6_3hbcr"]
[ext_resource type="PackedScene" uid="uid://qheem5a2k11u" path="res://ui/progress_bar.tscn" id="7_fyaf3"]
[ext_resource type="Script" path="res://ui/motivation_for_activity_indicator_label.gd" id="8_6owbh"]
[ext_resource type="PackedScene" uid="uid://cde3wjgvhjl0p" path="res://ui/need_modifier_hbox.tscn" id="9_tgnrq"]
[ext_resource type="PackedScene" uid="uid://dwkg0r0dey5o0" path="res://ui/need_effect_hbox.tscn" id="9_vq364"]

[sub_resource type="ButtonGroup" id="ButtonGroup_a7b33"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2wscj"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ncbpa"]

[sub_resource type="ButtonGroup" id="ButtonGroup_af6sb"]

[sub_resource type="ButtonGroup" id="ButtonGroup_gi6ql"]

[node name="ActivitySelectPanel" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -195.5
offset_right = 225.0
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecmi0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_constants/separation = 80

[node name="ActivitySelectVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(470, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="HeaderVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivitySelectVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/HeaderVBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Choose Activity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/HeaderVBox"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "Press Q / Esc to Cancel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RadioButtonVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivitySelectVBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="ActivitySelectButton" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/RadioButtonVBox" instance=ExtResource("2_gofsv")]
layout_mode = 2
button_group = SubResource("ButtonGroup_a7b33")

[node name="ActivitySelectButton2" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/RadioButtonVBox" instance=ExtResource("2_gofsv")]
layout_mode = 2
button_group = SubResource("ButtonGroup_2wscj")
text = "Activity 2 "

[node name="ActivitySelectButton3" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/RadioButtonVBox" instance=ExtResource("2_gofsv")]
layout_mode = 2
button_group = SubResource("ButtonGroup_ncbpa")
text = "Activity 3 "

[node name="ActivitySelectButton4" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/RadioButtonVBox" instance=ExtResource("2_gofsv")]
layout_mode = 2
button_group = SubResource("ButtonGroup_af6sb")
text = "Activity 4 "

[node name="ActivitySelectButton5" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/RadioButtonVBox" instance=ExtResource("2_gofsv")]
layout_mode = 2
button_group = SubResource("ButtonGroup_gi6ql")
text = "Activity 5 "

[node name="ActivityDurationVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivitySelectVBox"]
layout_mode = 2
script = ExtResource("3_lewa3")

[node name="ActivityDurationLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/ActivityDurationVBox"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "1h 15min"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActivityDurationSlider" type="HSlider" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/ActivityDurationVBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
value = 20.0

[node name="EstimatedCompletionTimeLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/ActivityDurationVBox"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "Estimated time of completion: 11:20 AM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButtonVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivitySelectVBox"]
custom_minimum_size = Vector2(461, 92)
layout_mode = 2
theme_override_constants/separation = 5

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Start"
script = ExtResource("4_xhsmu")

[node name="FailedToStartLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox"]
visible = false
layout_mode = 2
theme_type_variation = &"LabelSmallRed"
text = "You do not feel like doing this right now"
script = ExtResource("5_rbo4o")

[node name="FailedToStartLabelTimer" type="Timer" parent="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox/FailedToStartLabel"]
wait_time = 3.0
one_shot = true

[node name="ActivityDetailsPanel" type="BoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_3hbcr")

[node name="InstructionLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"LabelSmall"
text = "Select an activity to see details"

[node name="ActivityDetailsVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="MotvationForActivityVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MotivationForActivityLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotvationForActivityVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Motivation for Activity"

[node name="MotivationForActivityProgressBar" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotvationForActivityVBox" instance=ExtResource("7_fyaf3")]
layout_mode = 2

[node name="MotivationBreakdownVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MotivationBreakdownLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Motivation Breakdown"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BaseMotivationHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MotivationForActivityLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/BaseMotivationHBox"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"LabelVerySmall"
text = "Base motivation"
vertical_alignment = 1

[node name="MotivationForActivityIndicatorLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/BaseMotivationHBox"]
self_modulate = Color(0.48, 0.8, 0.48, 1)
layout_mode = 2
theme_type_variation = &"LabelVerySmallWhite"
text = "VERY HIGH"
vertical_alignment = 1
script = ExtResource("8_6owbh")

[node name="EffectsFromNeedsVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EffectsFromNeedsLabel" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmaller"
text = "Effects from satisfaction of needs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NeedModifierHBox" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2

[node name="NeedModifierHBox2" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2
need = 1

[node name="NeedModifierHBox3" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2
need = 2

[node name="NeedModifierHBox4" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2
need = 3

[node name="NeedModifierHBox5" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2
need = 4

[node name="NeedModifierHBox6" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("9_tgnrq")]
layout_mode = 2
need = 5

[node name="EffectsOfActivityVBox" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EffectsOfActivityLabel2" type="Label" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Effects of Activity"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer"]
layout_mode = 2

[node name="NeedEffectHBox" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("9_vq364")]
layout_mode = 2

[node name="NeedEffectHBox2" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("9_vq364")]
layout_mode = 2
need = 1

[node name="NeedEffectHBox3" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("9_vq364")]
layout_mode = 2
size_flags_horizontal = 0
need = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer"]
layout_mode = 2

[node name="NeedEffectHBox" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("9_vq364")]
layout_mode = 2
need = 3

[node name="NeedEffectHBox2" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("9_vq364")]
layout_mode = 2
need = 4

[node name="NeedEffectHBox3" parent="MarginContainer/HBoxContainer/ActivityDetailsPanel/ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("9_vq364")]
layout_mode = 2
size_flags_horizontal = 0
need = 5

[connection signal="value_changed" from="MarginContainer/HBoxContainer/ActivitySelectVBox/ActivityDurationVBox/ActivityDurationSlider" to="MarginContainer/HBoxContainer/ActivitySelectVBox/ActivityDurationVBox" method="_on_activity_duration_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox/StartButton" to="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox/StartButton" method="_on_button_pressed"]
[connection signal="timeout" from="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox/FailedToStartLabel/FailedToStartLabelTimer" to="MarginContainer/HBoxContainer/ActivitySelectVBox/StartButtonVBox/FailedToStartLabel" method="_on_timer_timeout"]
